<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/DialogTitleStyle"
        android:text="@string/dialog_notify_time_title"/>

    <NumberPicker
        android:id="@+id/npTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvMinutes"
        style="@style/DialogTitleStyle"
        android:text="@string/dialog_notify_time_minutes"/>

    <CheckBox
        android:id="@+id/cbNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_notify"/>

    <CheckBox
        android:id="@+id/cbDaily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily"/>


</LinearLayout>