<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:text="@string/dialog_add_time_title"/>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingStart="10dp"
        android:textColor="@android:color/black"
        android:text="@string/dialog_add_time_time"/>

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/etTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:mask="##:##"
        android:hint="0000"
        app:keep_hint="true"
        android:inputType="time"/>

    <CheckBox
        android:id="@+id/cbNight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_time_night"/>

</LinearLayout>